--- a/style.css
+++ b/style.css
@@ -28,5 +28,16 @@ html {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 40px;
+  margin: 30px;
+}
+
+.productButton {
+  width: 150px;
+  background-color: black;
+  color: white;
+  padding: 10px;
+  margin: 20px;
+
+ 
+  
 }
